test/libsolidity/syntaxTests/visibility/interface/function_private.sol
interface I {
	function f() private;
}
// ----
// TypeError: Functions in interfaces cannot be internal or private.
